# fakeG

./: .gitignore  CMakeLists.txt  README.md  README_en.md
config/: afakeg.yaml
src/app/: fake_g_app.cpp  fake_g_app.h
src/cli/: app_runner.cpp  app_runner.h  argument_parser.cpp  argument_parser.h
src/data/: structures.cpp  structures.h
src/io/: file_reader.cpp  file_reader.h  gaussian_writer.cpp  gaussian_writer.h
src/logger/: logger.cpp  logger.h
src/main/: afake_g.cpp  bfake_g.cpp  fake_g_app.cpp  fake_g_app.h  xfake_g.cpp  xtbfake_g.cpp
src/parsers/: amesp_parser.cpp  amesp_parser.h  bdf_parser.cpp  bdf_parser.h  parser_interface.cpp  parser_interface.h  xtb_parser.cpp  xtb_parser.h  xyz_parser.cpp  xyz_parser.h
src/parsers/xyz/: energy_extractors.cpp  energy_extractors.h  xyz_comment_parser.cpp  xyz_comment_parser.h
src/string/: string_utils.cpp  string_utils.h
